Debugging and clean up warnings